# hacker-news

./: .gitignore  .justfile  .prettierignore  .taplo.toml  Cargo.toml  Makefile  README.md  bacon.toml  biome.json  cargo-sources.json  com.dr.hacker-news.yml  docker-compose.yml  dprint.json  hacker-news.json  io.github.darrellroberts.hacker-news.yml  pnpm-lock.yaml  snapcraft.yaml  taplo.toml
.github/workflows/: release.yml  rust.yml
assets/: Info.plist  com.dr.hacker-news.desktop  hacker-news.desktop  io.github.darrellroberts.hacker-news.desktop  io.github.darrellroberts.hacker-news.metainfo.xml
hacker-news-api/: Cargo.toml
hacker-news-api/src/: client.rs  lib.rs  main.rs  types.rs
hacker-news-config/: Cargo.toml
hacker-news-config/src/: lib.rs  limits.rs
hacker-news-egui/: Cargo.toml  readme.md
hacker-news-egui/assets/: Info.plist  hacker-news.desktop
hacker-news-egui/src/: app.rs  event.rs  main.rs  renderer.rs  text.rs
hacker-news-egui/src/app/: comments.rs
hacker-news-egui/src/renderer/: comments.rs  styles.rs  text.rs
hacker-news-gpui/: .justfile  Cargo.toml  Info.plist  Makefile  README.MD
hacker-news-gpui/assets/: io.github.darrellroberts.hacker-news-dashboard.desktop
hacker-news-gpui/src/: article.rs  article_body.rs  comment.rs  common.rs  content.rs  footer.rs  header.rs  main.rs  rich_text.rs  scrollbar.rs  theme.rs
hacker-news-gpui/src/content/: background.rs  render.rs
hacker-news-gpui/src/footer/: tooltip.rs
hacker-news-iced/: Cargo.toml
hacker-news-iced/src/: app.rs  articles.rs  comment.rs  comments.rs  common.rs  config.rs  footer.rs  full_search.rs  header.rs  linux.rs  macos.rs  main.rs  nav_history.rs  richtext.rs  spinner.rs  tracing.rs  types.rs  widget.rs
hacker-news-iced/src/widget/: link.rs
hacker-news-search/: Cargo.toml
hacker-news-search/src/: api.rs  create_index.rs  lib.rs  main.rs  stories.rs
hacker-news-search/src/api/: comment.rs  story.rs
hacker-news-tauri/: .prettierignore  index.html  package-lock.json  package.json  vite.config.ts
hacker-news-tauri/src/: App.vue  styles.css
hacker-news-tauri/src-tauri/: Cargo.toml  tauri.conf.json
hacker-news-tauri/src-tauri/icons/: icon.icns
hacker-news-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
hacker-news-tauri/src/components/: Article.vue  ArticleDialog.vue  Comment.vue  RichText.vue  Tooltip.vue  UserModal.vue
hacker-news-tauri/src/types/: article.ts  user.ts
hacker-news-tui/: Cargo.toml  LICENSE  README.md
hacker-news-tui/src/: app.rs  articles.rs  comments.rs  config.rs  events.rs  footer.rs  help.rs  main.rs  search.rs  styles.rs
hacker-news-tui/src/comments/: comments_test.rs
html-sanitizer/: Cargo.toml
html-sanitizer/src/: lib.rs  parser.rs
html-sanitizer/src/parser/: parser_tests.rs
http-sanitizer/: Cargo.toml
http-sanitizer/src/: lib.rs  parser.rs
platform-settings/: Cargo.toml
platform-settings/src/: lib.rs  linux.rs  macos.rs
snap/gui/: hacker-news.desktop
