[package]
name = "hacker-news-api"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "sync"] }
