[package]
name = "hacker-news-api"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
trace = ["tracing"]

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2"

tracing = { version = "0.1", optional = true }

futures = "0.3"
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "gzip",
  "rustls-tls",
] }
tokio = { version = "1", features = ["macros", "sync"] }
