[package]
name = "hacker-news-config"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
rmp-serde = "1.3"
serde.workspace = true
hacker-news-search.workspace = true
hacker-news-api.workspace = true
app_dirs2.workspace = true
anyhow.workspace = true
tokio.workspace = true
flexi_logger.workspace = true
