[package]
name = "hacker-news-egui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true

flexi_logger = "0.27"

eframe = { version = "0.26", features = ["persistence"] }
egui = "0.26"
egui_extras = { version = "0.26", features = ["image"] }

hacker-news-api = { path = "../hacker-news-api" }
html-sanitizer = { path = "../html-sanitizer" }
