[package]
name = "hacker-news-egui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
hacker-news-api.workspace = true
html-sanitizer.workspace = true

flexi_logger = "0.28"

eframe = { version = "0.28", features = ["persistence"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["image"] }
