[package]
name = "hacker-news-gpui"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[[bin]]
name = "hacker-news-dashboard"
path = "src/main.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
async-compat = "0.2"
hacker-news-api.workspace = true
html-sanitizer.workspace = true
log.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio = "1"
futures = "0.3"
