[package]
name = "hacker-news-gpui"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[[bin]]
name = "hacker-news-dashboard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-compat = "0.2"
chrono.workspace = true
flexi_logger.workspace = true
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
hacker-news-api.workspace = true
html-sanitizer.workspace = true
log.workspace = true
tokio = "1"
platform-settings = { path = "../platform-settings" }
