[package]
name = "hacker-news-iced"
version = "0.1.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "opentelemetry-semantic-conventions",
    "tracing-subscriber",
]

[dependencies]
# iced = { version = "0.12", features = ["lazy", "tokio", "advanced"] }
iced = { version = "0.13", features = [
    "lazy",
    "tokio",
    "advanced",
    "auto-detect-theme",
    "image",
] }

hacker-news-api.workspace = true
html-sanitizer.workspace = true
hacker-news-search.workspace = true
log.workspace = true
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
serde.workspace = true
tokio.workspace = true
flexi_logger.workspace = true
tracing = "0.1"

opentelemetry = { version = "0.26", features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic", "trace"], optional = true }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace"], optional = true }
opentelemetry-semantic-conventions = { version = "0.26", optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

open = "5"
either = "1"
app_dirs2 = "2"
rmp-serde = "1.3"
console-subscriber = "0.4"
