[package]
name = "hacker-news-iced"
version = "0.1.14"
license.workspace = true
edition.workspace = true
description = "Hacker News Desktop Reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace = [
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "opentelemetry-semantic-conventions",
    "tracing-subscriber",
    "hacker-news-search/trace",
    "tracing",
]

[dependencies]
iced = { version = "0.13", features = [
    "lazy",
    "tokio",
    "advanced",
    "auto-detect-theme",
    "image",
    "canvas",
] }

hacker-news-api.workspace = true
html-sanitizer.workspace = true
hacker-news-search.workspace = true
log.workspace = true
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
serde.workspace = true
tokio.workspace = true
flexi_logger.workspace = true


tracing = { version = "0.1", optional = true }
opentelemetry = { version = "0.26", features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.26", features = [
    "grpc-tonic",
    "trace",
], optional = true }
opentelemetry_sdk = { version = "0.26", features = [
    "rt-tokio",
    "trace",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.26", optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

open = "5"
either = "1"
app_dirs2 = "2"
rmp-serde = "1.3"
console-subscriber = "0.4"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[package.metadata.deb]
maintainer = "Darrell Roberts"
copyright = "2024, Darrell Roberts"
license-file = "../LICENSE"
extended-description = """Hacker News Desktop Reader"""
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/hacker-news-iced",
        "usr/bin/",
        "755",
    ],
    [
        "../assets/io.github.darrellroberts.hacker-news.desktop",
        "usr/share/applications/",
        "644",
    ],
    [
        "../dist/icons/hicolor/32x32/apps/io.github.darrellroberts.hacker-news.png",
        "usr/share/icons/hicolor/32x32/apps/",
        "644",
    ],
    [
        "../dist/icons/hicolor/128x128/apps/io.github.darrellroberts.hacker-news.png",
        "usr/share/icons/hicolor/128x128/apps/",
        "644",
    ],
    [
        "../dist/icons/hicolor/256x256@2/apps/io.github.darrellroberts.hacker-news.png",
        "usr/share/icons/hicolor/256x256@2/apps/",
        "644",
    ],
]
