[package]
name = "hacker-news-search"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[features]
trace = ["tracing"]

[dependencies]
tantivy = "0.24"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
futures = "0.3"
hacker-news-api.workspace = true
html-sanitizer.workspace = true
thiserror = "2"
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
log.workspace = true

tracing = { version = "0.1", optional = true }
