[package]
name = "hacker-news-tui"
version = "0.1.0"
description = "Hacker News Tui"
authors = ["Darrell Roberts <droberts0674@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = "0.29"
color-eyre = "0.6"

hacker-news-api.workspace = true
hacker-news-search.workspace = true
html-sanitizer.workspace = true
app_dirs2.workspace = true
futures = "0.3"
tokio = { version = "1", features = ["rt"] }
open = "5"
tui-scrollview = "0.5"
flexi_logger.workspace = true
log.workspace = true
