[package]
name = "hacker-news-tui"
version = "0.1.0"
description = "Hacker News Tui"
authors = ["Darrell Roberts <droberts0674@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6"
crossterm = "0.29"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
chrono.workspace = true
futures = "0.3"
hacker-news-api.workspace = true
hacker-news-search.workspace = true
html-sanitizer.workspace = true
log.workspace = true
open = "5"
tokio = { version = "1", features = ["rt"] }
tui-scrollview = "0.5"
hacker-news-config.workspace = true
