[package]
name = "hacker-news-tui"
version = "0.1.0"
description = "Hacker News Tui"
license = "MIT"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
color-eyre = "0.6"
crossterm = "0.29"
futures = "0.3"
hacker-news-api.workspace = true
hacker-news-config.workspace = true
hacker-news-search.workspace = true
html-sanitizer.workspace = true
iana-time-zone = "0.1"
log.workspace = true
open = "5"
ratatui = { version = "0.29", features = [
  "unstable-rendered-line-info",
  "palette",
] }
serde.workspace = true
tokio = { version = "1", features = ["rt"] }
tui-input = "0.14"
tui-scrollview = "0.5"

[package.metadata.deb]
name = "hacker-news-tui"
maintainer = "Darrell Roberts"
copyright = "2024, Darrell Roberts"
license-file = "../LICENSE"
extended-description = """Hacker News Tui Reader"""
section = "utility"
priority = "optional"
assets = [["target/release/hacker-news-tui", "usr/bin/", "755"]]
