[package]
name = "html-sanitizer"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
nom = "8"

[dev-dependencies]
cool_asserts = "2"
