[package]
name = "platform-settings"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
futures = "0.3"
log.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.21"
glib = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
anyhow.workspace = true
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSObject",
  "NSString",
  "NSDictionary",
  "NSUserDefaults",
] }
