[package]
name = "hacker-news-tauri"
version = "0.0.1"
authors = ["Darrell Roberts"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = ""
description = "A Tauri App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1"
chrono = "0.4"
flexi_logger = "0.27"
hacker-news-api = { path = "../../hacker-news-api" }
http-sanitizer = { path = "../../http-sanitizer" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
