[package]
name = "hacker-news-tauri"
version = "0.0.1"
description = "A Tauri App"
authors = ["Darrell Roberts"]
license = "Apache-2.0 OR MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hacker-news-api = { path = "../../hacker-news-api" }
html-sanitizer = { path = "../../html-sanitizer" }
anyhow = "1"
flexi_logger = "0.27"
log = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
