[package]
name = "hacker-news-tauri"
version = "0.0.1"
description = "A Tauri App"
license.workspace = true
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
chrono.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

tauri = { version = "1.5", features = ["shell-open"] }
hacker-news-api = { path = "../../hacker-news-api" }
html-sanitizer = { path = "../../html-sanitizer" }
flexi_logger = "0.27"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
